Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,9 +408,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.099999999999994"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error(x_values, y_values, 1.7, 10, 13) # -6.099999999999994"
    ]
@@ -456,7 +467,10 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    pass"
+    "    y_hat = m*x + b\n",
+    "    y = y_actual(x, x_values, y_values)\n",
+    "    name = 'error at ' + str(x)\n",
+    "    return {'x': [x, x], 'y': [y, y_hat], 'mode': 'lines', 'marker': {'color': 'red'}, 'name': name}"
    ]
   },
   {
