--- a/index.ipynb
+++ b/index.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,9 +475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [120, 120],\n",
+       " 'y': [93.0, 214.0],\n",
+       " 'mode': 'lines',\n",
+       " 'marker': {'color': 'red'},\n",
+       " 'name': 'error at 120'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error_at_120m = error_line_trace(x_values, y_values, 1.7, 10, 120)\n",
     "\n",
